# sovreign-ai

./: .gitignore  README.md  pyproject.toml
data/batches/: batch_S0_001.jsonl  batch_S0_002.jsonl  batch_S0_003.jsonl  batch_S0_004.jsonl  batch_S0_005.jsonl  batch_S0_006.jsonl  batch_S0_007.jsonl  batch_S0_008.jsonl  batch_S0_009.jsonl  batch_S0_010.jsonl  batch_S0_011.jsonl  batch_S0_012.jsonl  batch_S0_013.jsonl  batch_S0_014.jsonl  batch_S0_015.jsonl  batch_S0_016.jsonl  batch_S0_017.jsonl  batch_S0_018.jsonl  batch_S0_019.jsonl  batch_S0_020.jsonl  batch_S0_021.jsonl  batch_S0_022.jsonl  batch_S0_023.jsonl  batch_S1_001.jsonl  batch_S1_002.jsonl  batch_S1_003.jsonl  batch_S1_004.jsonl  batch_S1_005.jsonl  batch_S1_006.jsonl  batch_S1_007.jsonl  batch_S1_008.jsonl  batch_S1_009.jsonl  batch_S1_010.jsonl  batch_S1_011.jsonl  batch_S1_012.jsonl  batch_S1_013.jsonl  batch_S1_014.jsonl  batch_S1_015.jsonl  batch_S1_016.jsonl  batch_S1_017.jsonl  (+75 more)
data/cot/: contrastive_pairs.jsonl  (+4 more)
notebooks/: eval_compare.ipynb  gemma3_sft.ipynb  lfm2_sft.ipynb  qwen35_cot_sft.ipynb  qwen35_sft.ipynb  shared_utils.py
scripts/: assemble_cot_dataset.py  demo_server.py  generate_augmented_data.py  generate_augmented_r2.py  generate_augmented_r2_fix.py  generate_contrastive_pairs.py  generate_cot_reasoning.py  generate_cot_reasoning_api.py  generate_cot_reasoning_v2.py  validate_contrastive.py
stress_test/: handwritten.jsonl
templates/: master_prompt.txt  seeds.json
tests/: test_merge.py  test_schema.py  test_shared_utils.py  test_split.py  test_stats.py  test_validate.py
(+23 files in other folders)
