[project]
name = "sovreign"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "wms2537", email = "weimengsoh0827@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
